# netzooe_eservice_api

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: environments.json
.github/actions/setup-project/: action.yml
.github/workflows/: ci.yml  configure.yml  schedule-ci.yml  security.yml
netzooe_eservice_api/: __init__.py  api.py  constants.py  error.py
scripts/: lint.sh  setup.sh
tests/: test_api.py
